# ensemble-llm-wiki

./: .env.example  .gitignore  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  kb  kb.bat  pyproject.toml  requirements.txt
builder/: README.md  requirements.txt
builder/src/: cli.py  kbcli.py
builder/src/core/: chaptered.py  compiler.py  confidence.py  contradictions.py  entity_types.py  exports.py  foundations.py  graphify_integration.py  indexer.py  ingest.py  kbapi.py  lifecycle.py  llm.py  prompts.py  registry.py  scoring.py  session_start.py  skill_seekers.py  transcript_harvester.py
builder/src/output/example_data/: summary.json
builder/src/utils/: doc_reader.py  file_utils.py  llm_client.py  markdown_utils.py
cloud_platform/: README.md  requirements.txt
cloud_platform/deploy/: .env.example  Dockerfile.gateway  Dockerfile.mcp  docker-compose.yml
cloud_platform/docs/: DEVELOPER_GUIDE.md  README.md
cloud_platform/src/: admin.py  log.py
cloud_platform/src/gateway/: main.py
cloud_platform/src/server/: mcp_http_server.py
dashboard/: app.py
dashboard/templates/: index.html
docs/: ARCHITECTURE.md  AUDIT.md
examples/: javascript_client.js  python_client.py
local-server/: README.md  requirements.txt
local-server/src/: server.py
scripts/: zotero_add.py
tests/: conftest.py  test_builder.py  test_builder_core.py  test_cloud.py  test_dashboard.py  test_gateway.py  test_local_server.py  test_scoring.py
